# android-kcp

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  turn.c  turn.h
app/src/main/cpp/cJSON/: CMakeLists.txt
app/src/main/cpp/juice/: addr.c  conn_poll.c  fake-rfc2553.h  get_name.c  get_name.h  ice.c  udp.c
app/src/main/java/com/vaca/myapplication/: BleServer.kt  GreetCallback.java  JWebSocketClient.kt  MainActivity.kt  MainApplication.kt  TurnMsg.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
